syntax = "proto3";

package github.com.lbaroni.imersao_desafio_01; //nome do package ajustado devido a erro no protoc por causa do hifen no nome

//adicionado package devido a erro no protoc
option go_package = "github.com.lbaroni.imersao_desafio_01/application/grpc/protofiles;pb"; 

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {};
    rpc FindProducts(FindProductsRequest) returns (FindProductsResponse) {};
}


message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message CreateProductResponse {
    Product product = 1;
}

message FindProductsRequest{

}

message FindProductsResponse{
   repeated Product products = 1;
}